--- a/index.html
+++ b/index.html
@@ -25,19 +25,46 @@
     <p>Roll a dice</p></div>
 </div>
 
-<!-- end of flextainer -->  
-</div>  
 
+</div>  
+<!-- end of flextainer -->  
+ 
 <div class='container'>  
 <div id='gentainer'>
 <button id='generate-btn'>Generate</button> a number from<br> <input id='minput' value='0'> to <input id='maxput' value='100'> (inclusive) = <span id='gen-output'></span>
 </div>
   </div>
 
+<!-- end of generator -->
+  
+  
+  
+<div class='container' id='cardtainer'>  
+  
+  <div class='card-section'>
+    <button id='pick-btn'>Pick a card</button>
+  </div>
+  
+  <div class='card-section'>
+    <div id='card-output'></div>
+  </div>
+  
+  <div class='card-section' id='img-output'>
+      <img 
+  src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 300'%3E%3Crect x='0' y='0' width='200' height='300' rx='15' ry='15' fill='white' stroke='%23000000' stroke-width='2'/%3E%3Crect x='10' y='10' width='180' height='280' rx='10' ry='10' fill='%23C0C0C0'/%3E%3Cdefs%3E%3Cpattern id='ultraDenseVarDotPattern' x='0' y='0' width='6' height='6' patternUnits='userSpaceOnUse'%3E%3Ccircle cx='3' cy='3' r='1.5' fill='%23B87333'/%3E%3Ccircle cx='0' cy='3' r='1.2' fill='%23B87333'/%3E%3Ccircle cx='6' cy='3' r='1.8' fill='%23B87333'/%3E%3C/pattern%3E%3C/defs%3E%3Crect x='10' y='10' width='180' height='280' rx='10' ry='10' fill='url(%23ultraDenseVarDotPattern)'/%3E%3C/svg%3E" 
+  height="100" alt="Playing card back">
+  </div>
+  
+  
+  </div>
+
+<!-- end of cards -->  
+  
+  
+
   
 <!-- end of wallet -->
 </div>  
-
 
 <script src="./script.js"></script>
 
